--- a/html/about.html
+++ b/html/about.html
@@ -242,6 +242,7 @@
               </a>
             </li>
           </ul>
+          
         </div>
       </section>
       <section class="section history section--gray">
@@ -505,8 +506,8 @@
           <h2 class="section__title">
             Воплощаем <span class="accent">идеи</span>
           </h2>
-          <ul class="list works-about-list">
-            <li class="item">
+          <ul class="list works-about__list grid">
+            <li class="item grid__item works-about__item">
               <a class="link" href="">
                 <div>
                   <img
@@ -529,7 +530,7 @@
                   </a>
                   <p>Наружная реклама</p>
                 </li> -->
-            <li class="item">
+            <li class="item grid__item works-about__item">
               <a class="link" href="">
                 <div>
                   <img
@@ -552,7 +553,7 @@
                   </a>
                   <p>Фирменный стиль</p>
                 </li> -->
-            <li class="item">
+            <li class="item grid__item works-about__item">
               <a class="link" href="">
                 <div>
                   <img
@@ -566,7 +567,7 @@
               </a>
               <p class="upper works-label">Фирменный стиль</p>
             </li>
-            <li class="item">
+            <li class="item grid__item works-about__item">
               <a class="link" href="">
                 <div>
                   <img
@@ -581,7 +582,7 @@
               <p class="upper works-label">Входная группа и вывеска</p>
             </li>
           </ul>
-          <button class="button" type="button button--label">Все работы</button>
+          <button class="button--label" type="button">Все работы</button>
         </div>
       </section>
       <section class="section proposal">
