--- a/index.html
+++ b/index.html
@@ -340,7 +340,10 @@
             <div class="grid__item">
               <p class="section__label">Наши партнеры</p>
               <h2 class="section__title">
-                <span class="block"><span class="accent">400+</span> компаний</span> доверяют нам
+                <span class="block"
+                  ><span class="accent">400+</span> компаний</span
+                >
+                доверяют нам
               </h2>
             </div>
             <div class="grid__item">
@@ -545,29 +548,39 @@
                 <nav class="grid__item">
                   <ul class="list main-nav--footer">
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/about.html">О компании</a>
+                      <a class="link main-nav__link" href="./html/about.html"
+                        >О компании</a
+                      >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/features.html">Услуги</a>
+                      <a class="link main-nav__link" href="./html/features.html"
+                        >Услуги</a
+                      >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/works.html">Наши работы</a>
+                      <a class="link main-nav__link" href="./html/works.html"
+                        >Наши работы</a
+                      >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/services.html">Сервис</a>
+                      <a class="link main-nav__link" href="./html/services.html"
+                        >Сервис</a
+                      >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/complex.html"
+                      <a class="link main-nav__link" href="./html/complex.html"
                         >Комплексные решения</a
                       >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/posts.html"
+                      <a class="link main-nav__link" href="./html/posts.html"
                         >Статьи и новости</a
                       >
                     </li>
                     <li class="item">
-                      <a class="link main-nav__link " href="./html/contacts.html">Контакты</a>
+                      <a class="link main-nav__link" href="./html/contacts.html"
+                        >Контакты</a
+                      >
                     </li>
                   </ul>
                 </nav>
@@ -599,9 +612,15 @@
         <div class="low-footer">
           <p>&copy; 2011-2020 Promomix</p>
           <ul class="list social-list">
-            <li class="social-list__item--footer"><a class="link" href="">Facebook</a></li>
-            <li class="social-list__item--footer"><a class="link" href="">Vkontakte</a></li>
-            <li class="social-list__item--footer"><a class="link" href="">Instagram</a></li>
+            <li class="social-list__item--footer">
+              <a class="link" href="">Facebook</a>
+            </li>
+            <li class="social-list__item--footer">
+              <a class="link" href="">Vkontakte</a>
+            </li>
+            <li class="social-list__item--footer">
+              <a class="link" href="">Instagram</a>
+            </li>
           </ul>
         </div>
       </div>
